// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`header > renders with as correctly 1`] = `
"<section data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</section>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with body slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with bottom slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>Bottom slot
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with class correctly 1`] = `
"<header data-slot="root" class="border-b-0">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with content slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with default slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class="">Default slot</div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with left slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if-->Left slot
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with mode drawer correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Close menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-vaul-overlay="" data-vaul-snap-points="false" data-vaul-snap-points-overlay="true" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="--snap-point-height: 0; pointer-events: auto;" tabindex="-1" data-vaul-drawer="" data-vaul-drawer-direction="bottom" data-vaul-delayed-snap-points="false" data-vaul-snap-points="false" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open">
  <div data-vaul-drawer-visible="true" data-vaul-handle="" aria-hidden="true" data-slot="handle" class=""><span data-vaul-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0">header.title</h2><p id="akar-dialog-description-v-1">header.description</p></span>
  <!--v-if-->
  <div data-slot="body" class=""></div>
</div>



<!--teleport end-->"
`;

exports[`header > renders with mode modal correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Close menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" style="pointer-events: auto;"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0">header.title</h2><p id="akar-dialog-description-v-1">header.description</p></span>
  <div data-slot="header" class="">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="right" class=""><button type="button" aria-label="Close menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
  <div data-slot="body" class=""></div>
</div>




<!--teleport end-->"
`;

exports[`header > renders with mode slideover correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Close menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->



<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-side="right" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0">header.title</h2><p id="akar-dialog-description-v-1">header.description</p></span>
  <div data-slot="header" class="">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="right" class=""><button type="button" aria-label="Close menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
  <div data-slot="body" class=""></div>
</div>



<!--teleport end-->"
`;

exports[`header > renders with right slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class="">Right slot<button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with title correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Documentation" data-slot="title" class="">Documentation</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with title slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Title slot" data-slot="title" class="">Title slot</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with to correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/docs" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with toggle correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with toggle slot correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class="">Toggle slot</div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with toggleSide correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a></div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with top slot correctly 1`] = `
"<header data-slot="root">Top slot<div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders with ui correctly 1`] = `
"<header data-slot="root">
  <div class="gap-1.5" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class=""><button type="button" aria-label="Open menu" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;

exports[`header > renders without toggle correctly 1`] = `
"<header data-slot="root">
  <div class="" data-slot="container">
    <div data-slot="left" class="">
      <!--v-if--><a href="/" aria-label="Pohon UI" data-slot="title" class="">Pohon UI</a>
    </div>
    <div data-slot="center" class=""></div>
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</header>
<!--v-if-->
<!--teleport start-->
<!--teleport end-->"
`;
